objects/Campaign_Demographics__c.object
<CustomObject>
    <fields>
        <fullName>Net_Worth_3_0__c</fullName>
        <label>Net Worth</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0 or Less</fullName>
                </value>
                <value>
                    <fullName>$1 - $4,999</fullName>
                </value>
                <value>
                    <fullName>$5,000 - $24,999</fullName>
                </value>
                <value>
                    <fullName>$25,000 - $49,999</fullName>
                </value>
                <value>
                    <fullName>$50,000 - $74,999</fullName>
                </value>
                <value>
                    <fullName>$75,000 - $99,999</fullName>
                </value>
                <value>
                    <fullName>$100,000 - $149,999</fullName>
                </value>
                <value>
                    <fullName>$150,000 - $249,999</fullName>
                </value>
                <value>
                    <fullName>$250,000 - $374,999</fullName>
                </value>
                <value>
                    <fullName>$375,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000 - $749,999</fullName>
                </value>
                <value>
                    <fullName>$750,000 - $999,999</fullName>
                </value>
                <value>
                    <fullName>$1,000,000 +</fullName>
                </value>
                <value>
                    <fullName>test</fullName>
                    <isActive>false</isActive>
                    <label>test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Movers_Range__c</fullName>
        <label>New Movers Range</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_movers__c</fullName>
        <label>New movers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Adults_in_HH__c</fullName>
        <label>Number of Adults in HH</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Adults_in_hh_ranges__c</fullName>
        <label>Number of Adults in hh ranges</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_ranges__c</fullName>
        <label>Number of Children ranges</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Persons_in_HH__c</fullName>
        <label>Household Size</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Criteria_Element__c</fullName>
        <label>Preferred Contact Criteria Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Cell</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>C = Cell</fullName>
                    <isActive>false</isActive>
                    <label>C = Cell</label>
                </value>
                <value>
                    <fullName>E = Email</fullName>
                    <isActive>false</isActive>
                    <label>E = Email</label>
                </value>
                <value>
                    <fullName>M = Mail</fullName>
                    <isActive>false</isActive>
                    <label>M = Mail</label>
                </value>
                <value>
                    <fullName>P = Phone</fullName>
                    <isActive>false</isActive>
                    <label>P = Phone</label>
                </value>
                <value>
                    <fullName>T = Text</fullName>
                    <isActive>false</isActive>
                    <label>T = Text</label>
                </value>
                <value>
                    <fullName>W = Web</fullName>
                    <isActive>false</isActive>
                    <label>W = Web</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Presence_of_Children__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence of Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presence_of_Donor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence of Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presence_of_Elderly_Parents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence of Elderly Parents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>African American</fullName>
                </value>
                <value>
                    <fullName>American Indian</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>Caucasian</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Oriental</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Uncoded</fullName>
                </value>
                <value>
                    <fullName>Black Or African American</fullName>
                    <isActive>false</isActive>
                    <label>Black Or African American</label>
                </value>
                <value>
                    <fullName>Hispanic Or Latino(All Races)</fullName>
                    <isActive>false</isActive>
                    <label>Hispanic Or Latino(All Races)</label>
                </value>
                <value>
                    <fullName>Native Hawaiian Or Other Pacific Islander</fullName>
                    <isActive>false</isActive>
                    <label>Native Hawaiian Or Other Pacific Islander</label>
                </value>
                <value>
                    <fullName>Other/Multiracial</fullName>
                    <isActive>false</isActive>
                    <label>Other/Multiracial</label>
                </value>
                <value>
                    <fullName>Unknown/Decline To Specify</fullName>
                    <isActive>false</isActive>
                    <label>Unknown/Decline To Specify</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Religion_Criteria_Element__c</fullName>
        <label>Religion Criteria Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buddhist</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Ethiopian Orthodox</fullName>
                </value>
                <value>
                    <fullName>Hindu</fullName>
                </value>
                <value>
                    <fullName>Islamic</fullName>
                </value>
                <value>
                    <fullName>Jewish</fullName>
                </value>
                <value>
                    <fullName>Sikh</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
                <value>
                    <fullName>Mormon</fullName>
                </value>
                <value>
                    <fullName>Eastern Orthodox</fullName>
                </value>
                <value>
                    <fullName>Protestant</fullName>
                </value>
                <value>
                    <fullName>Shinto</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>B - Buddhist</fullName>
                    <isActive>false</isActive>
                    <label>B - Buddhist</label>
                </value>
                <value>
                    <fullName>Blank - Uncoded</fullName>
                    <isActive>false</isActive>
                    <label>Blank - Uncoded</label>
                </value>
                <value>
                    <fullName>C - Catholic</fullName>
                    <isActive>false</isActive>
                    <label>C - Catholic</label>
                </value>
                <value>
                    <fullName>E - Ethiopian Orthodox</fullName>
                    <isActive>false</isActive>
                    <label>E - Ethiopian Orthodox</label>
                </value>
                <value>
                    <fullName>H - Hindu</fullName>
                    <isActive>false</isActive>
                    <label>H - Hindu</label>
                </value>
                <value>
                    <fullName>I - Islamic</fullName>
                    <isActive>false</isActive>
                    <label>I - Islamic</label>
                </value>
                <value>
                    <fullName>J - Jewish</fullName>
                    <isActive>false</isActive>
                    <label>J - Jewish</label>
                </value>
                <value>
                    <fullName>K - Sikh</fullName>
                    <isActive>false</isActive>
                    <label>K - Sikh</label>
                </value>
                <value>
                    <fullName>L - Lutheran</fullName>
                    <isActive>false</isActive>
                    <label>L - Lutheran</label>
                </value>
                <value>
                    <fullName>M - Mormon</fullName>
                    <isActive>false</isActive>
                    <label>M - Mormon</label>
                </value>
                <value>
                    <fullName>O - Eastern Orthodox</fullName>
                    <isActive>false</isActive>
                    <label>O - Eastern Orthodox</label>
                </value>
                <value>
                    <fullName>P - Protestant</fullName>
                    <isActive>false</isActive>
                    <label>P - Protestant</label>
                </value>
                <value>
                    <fullName>S - Shinto</fullName>
                    <isActive>false</isActive>
                    <label>S - Shinto</label>
                </value>
                <value>
                    <fullName>X - Unknown</fullName>
                    <isActive>false</isActive>
                    <label>X - Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suppression_Non_emailable__c</fullName>
        <label>Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Has an email address</fullName>
                </value>
                <value>
                    <fullName>Doesn’t have an email address</fullName>
                </value>
                <value>
                    <fullName>Everyone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>to_1__c</fullName>
        <label>to</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>to_Number_of_Adults_in_HH__c</fullName>
        <label>to_Number of Adults in HH</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_Number_of_Children__c</fullName>
        <label>to_Number of Children</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_Number_of_Persons_in_HH__c</fullName>
        <label>to_Number of Persons in HH</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_age__c</fullName>
        <label>to_age</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Campaign Demographics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Campaign Demographics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Demographics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>